--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,12 @@
     	<artifactId>javacv</artifactId>
     	<version>1.1</version>
   	</dependency>
+  	<dependency>
+        <groupId>wpilib</groupId>
+        <artifactId>NetworkTables</artifactId>
+        <version>1.0</version>
+        <scope>system</scope>
+        <systemPath>${basedir}/lib/NetworkTables.jar</systemPath>
+    </dependency>
   </dependencies>
 </project>
